Chore: Deprecate `StringUtils` in favor of `Strings`, remove `toKebabCase` implementation and related tests, and update `Service` to replace `StringUtils` usage